--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/themes/main.css"  type = "text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Free and easy-to-use admin template based on React 17+" />
-    <meta name="keywords" content="altence lightence admin template react redux responsive free" />
-    <meta itemprop="title" content="Lightence Admin Panel" />
-    <meta itemprop="description" content="Free and easy-to-use admin template based on React 17+" />
+    <meta name="description" content="ECAP+ Program Managment Platform" />
+    <meta name="keywords" content="ECAP+ Program Managment Platform" />
+    <meta itemprop="title" content="ECAP+ Program Managment Platform" />
+    <meta itemprop="description" content="ECAP+ Program Managment Platform" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
