modified the ecap-plus-web-portal

--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ECAP II</title>
-    <meta name="description" content="ECAP II PMP application" />
-    <meta name="author" content="ECAP II" />
 
-    <meta property="og:title" content="ECAP II" />
-    <meta property="og:description" content="ECAP II PMP application" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/ecap-logo.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ECAP + PMP</title>
+  <meta name="description" content="ECAP + PMP application" />
+  <meta name="author" content="ECAP +" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ecapii" />
-    <meta name="twitter:image" content="/ecap-logo.png" />
-  </head>
+  <meta property="og:title" content="ECAP + " />
+  <meta property="og:description" content="ECAP + PMP application" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/ecap-logo.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@ecap+" />
+  <meta name="twitter:image" content="/ecap-logo.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
