--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@ecap+" />
   <meta name="twitter:image" content="/ecap-logo.png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
 </head>
 
 <body>
